--- a/src/app/pages/single-work-page/single-work-page.component.html
+++ b/src/app/pages/single-work-page/single-work-page.component.html
@@ -39,6 +39,10 @@ type="edit" title="Editar Trbalho/Tarefa">
             </div>
         </div>
         <div class="single-info-container">
+            <h1>Tipo:</h1>
+            <input [value]="workType">
+        </div>
+        <div class="single-info-container">
             <h1>Data De Entrega:</h1>
             <input [value]="deliveryDate">
         </div>
