--- a/src/app/components/dialog-elements/work-dialog/work-dialog.component.css
+++ b/src/app/components/dialog-elements/work-dialog/work-dialog.component.css
@@ -4,7 +4,8 @@
 
 .work-container {
     width: 350px;
-    height: 375px;
+    min-height: 375px;
+    padding-bottom: 30px;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
