--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,4 +1,4 @@
 <div class="header-container">
-    <h1 [routerLink]="['/cadernetas']" class="home-txt">Home</h1>
+    <h1 [routerLink]="['/']" class="home-txt">Home</h1>
     <h1 [routerLink]="['/user']" class="username-txt">Olá, {{username}}!</h1>
 </div>
