Adding back arrow to go back on previous pages

--- a/src/app/pages/lessons-page/lessons-page.component.html
+++ b/src/app/pages/lessons-page/lessons-page.component.html
@@ -5,6 +5,8 @@
 type="create" title="Criar Aula">
 </app-lesson-dialog>
 
+<app-back-arrow></app-back-arrow>
+
 <div class="lessons-page-container">
     <h1 class="title-txt">Aulas</h1>
     <h1 *ngIf="!isLessonsLoaded" class="loading-txt">Carregando...</h1>
