--- a/src/app/pages/single-notebook-page/single-notebook-page.component.html
+++ b/src/app/pages/single-notebook-page/single-notebook-page.component.html
@@ -19,6 +19,8 @@ content="Deseja realmente deletar essa caderneta? Todas as aulas e trabalhos ser
 type="edit" title="Editar Caderneta">
 </app-notebook-dialog>
 
+<app-back-arrow></app-back-arrow>
+
 <div class="single-notebook-container">
     <h1 class="title-txt">Informações</h1>
     <div class="info-container">
