--- a/src/app/pages/single-work-page/single-work-page.component.html
+++ b/src/app/pages/single-work-page/single-work-page.component.html
@@ -19,6 +19,8 @@ content="Deseja realmente deletar esse trabalho/tarefa? Todas as anotações e n
 type="edit" title="Editar Trbalho/Tarefa">
 </app-work-dialog>
 
+<app-back-arrow></app-back-arrow>
+
 <div class="single-work-container">
     <h1 class="title-txt">Informações</h1>
     <div class="info-container">
