--- a/src/app/pages/single-lesson-page/single-lesson-page.component.html
+++ b/src/app/pages/single-lesson-page/single-lesson-page.component.html
@@ -20,6 +20,8 @@ content="Deseja realmente deletar essa aula? Todas as anotações e chamadas ser
 type="edit" title="Editar Aula">
 </app-lesson-dialog>
 
+<app-back-arrow></app-back-arrow>
+
 <div class="single-lesson-container">
     <h1 class="title-txt">Informações</h1>
     <div class="info-container">
