Setting default values to selects

--- a/src/app/components/dialog-elements/notebook-dialog/create-edit-dialog/notebook-dialog.component.html
+++ b/src/app/components/dialog-elements/notebook-dialog/create-edit-dialog/notebook-dialog.component.html
@@ -4,6 +4,8 @@
         <div>
             <p>Classe:</p>
             <select [(ngModel)]="classe">
+                <option value="Ensino_Fundamental_5_A">Ensino Fundamental 5-A</option>
+                <option value="Ensino_Fundamental_5_B">Ensino Fundamental 5-B</option>
                 <option value="Ensino_Fundamental_6_A">Ensino Fundamental 6-A</option>
                 <option value="Ensino_Fundamental_6_B">Ensino Fundamental 6-B</option>
                 <option value="Ensino_Fundamental_7_A">Ensino Fundamental 7-A</option>
