--- a/src/app/components/dialog-elements/work-dialog/work-dialog.component.html
+++ b/src/app/components/dialog-elements/work-dialog/work-dialog.component.html
@@ -17,7 +17,7 @@
             [(ngModel)]="observations">
         </div>
         <div>
-            <p>Tipo:</p>
+            <p>*Tipo:</p>
             <select [(ngModel)]="workType">
                 <option value="TRABALHO">TRABALHO/TAREFA</option>
                 <option>PROVA</option>
