--- a/src/app/pages/lessons-page/lessons-page.component.html
+++ b/src/app/pages/lessons-page/lessons-page.component.html
@@ -14,6 +14,24 @@ type="create" title="Criar Aula">
         <button (click)="switchCreateMode()" class="create-btn">
             <h1>Nova Aula</h1>
         </button>
+        <div class="sort-container">
+            <div>
+                <h1>Ordernar Por:</h1>
+                <select (change)="selectChange()" [(ngModel)]="sortBy">
+                    <option value="date">Data</option>
+                    <option value="title">Título</option>
+                    <option value="attendances">Chamada</option>
+                    <option value="quantity">Quantidade</option>
+                </select>
+            </div>
+            <div>
+                <h1>Ordem:</h1>
+                <select (change)="selectChange()" [(ngModel)]="direction">
+                    <option value="asc">Crescente</option>
+                    <option value="desc">Decrescente</option>
+                </select>
+            </div>
+        </div>
         <div class="lessons-container">
             <div class="lessons-header">
                 <div><h1>Data</h1></div>
