--- a/src/app/pages/works-page/works-page.component.html
+++ b/src/app/pages/works-page/works-page.component.html
@@ -14,6 +14,24 @@ type="create" title="Criar Trabalho/Tarefa">
         <button (click)="switchCreateMode()" class="create-btn">
             <h1>Novo Trabalho/Tarefa</h1>
         </button>
+        <div class="sort-container">
+            <div>
+                <h1>Ordernar Por:</h1>
+                <select (change)="selectChange()" [(ngModel)]="sortBy">
+                    <option value="deliveryDate">Data</option>
+                    <option value="title">Título</option>
+                    <option value="grades">Notas</option>
+                    <option value="type">Tipo</option>
+                </select>
+            </div>
+            <div>
+                <h1>Ordem:</h1>
+                <select (change)="selectChange()" [(ngModel)]="direction">
+                    <option value="asc">Crescente</option>
+                    <option value="desc">Decrescente</option>
+                </select>
+            </div>
+        </div>
         <div class="works-container">
             <div class="works-header">
                 <div><h1>Data</h1></div>
