--- a/src/app/pages/home-page/home-page.component.html
+++ b/src/app/pages/home-page/home-page.component.html
@@ -30,6 +30,14 @@ type="create" title="Criar Caderneta">
                     <option value="desc">Decrescente</option>
                 </select>
             </div>
+            <div>
+                <h1>Página:</h1>
+                <select (change)="selectChange()" [(ngModel)]="pageNum">
+                    <option *ngFor="let pageNum of pageNumbers">
+                        {{pageNum}}
+                    </option>
+                </select>
+            </div>
         </div>
         <div class="notebooks-container">
             <div class="notebooks-header">
