--- a/src/app/components/dialog-elements/work-dialog/work-dialog.component.html
+++ b/src/app/components/dialog-elements/work-dialog/work-dialog.component.html
@@ -22,7 +22,7 @@
                 <option value="TRABALHO">TRABALHO/TAREFA</option>
                 <option>PROVA</option>
                 <option>PARTICIPAÇÃO</option>
-                <option>SIMULADO</option>
+                <option>OUTROS</option>
             </select>
         </div>
         <div>
