--- a/src/app/pages/single-notebook-page/single-notebook-page.component.html
+++ b/src/app/pages/single-notebook-page/single-notebook-page.component.html
@@ -22,7 +22,7 @@ type="edit" title="Editar Caderneta">
 
 <app-back-arrow></app-back-arrow>
 
-<div class="single-notebook-container">
+<div [ngClass]="{ 'blur-filter': isDeleteMode || isFinalizeMode || isEditMode }" class="single-notebook-container">
     <h1 class="title-txt">Informações</h1>
     <div class="info-container">
         <div class="single-info-container">
