--- a/src/app/pages/home-page/home-page.component.html
+++ b/src/app/pages/home-page/home-page.component.html
@@ -1,52 +1,85 @@
 <app-notebook-dialog 
-*ngIf="isCreateMode" 
-[teacherId]="teacherId"
-(cancelButtonClick)="switchCreateMode()" (confirmButtonClick)="refreshNotebooks(); switchCreateMode()"
-type="create" title="Criar Caderneta">
+    *ngIf="isCreateMode" [teacherId]="teacherId" 
+    (cancelButtonClick)="switchCreateMode()"
+    (confirmButtonClick)="refreshNotebooks(); switchCreateMode()" 
+    type="create" title="Criar Caderneta"
+    class="child-component">
 </app-notebook-dialog>
 
-<div [ngClass]="isCreateMode.toString()" class="home-container">
-    <h1 class="title-txt">Cadernetas</h1>
-    <h1 *ngIf="!isNotebooksLoaded" class="loading-txt">Carregando...</h1>
-    <div *ngIf="isNotebooksLoaded" class="content-container">
-        <button (click)="switchCreateMode()" class="create-btn">
-            <h1>Nova Caderneta</h1>
-        </button>
+<div [ngClass]="{ 'blur-filter': isCreateMode }" class="home-container">
 
-        <app-sorting [orderByElementsList]="[
+    <h1 class="title-txt">Cadernetas</h1>
+    <div [ngSwitch]="currentState">
+
+        <h1 *ngSwitchCase="'loading'" class="loading-txt">Carregando...</h1>
+
+        <div *ngSwitchCase="'loaded'" class="content-container">
+            <button (click)="switchCreateMode()" class="create-btn">
+                <h1>Nova Caderneta</h1>
+            </button>
+
+            <app-sorting [orderByElementsList]="[
             {value: 'classe', name: 'Classe'},
             {value: 'subject', name: 'Matéria'},
             {value: 'bimester', name: 'Bimestre'},
             {value: 'status', name: 'Status'},
             {value: 'createDate', name: 'Data'}
-            ]" 
-            [totalPages]="totalPages"
-            (orderByOptionEvent)="orderByOnChange($event)"
-            (directionOptionEvent)="directionOnChange($event)"
-            (pageNumOptionEvent)="pageNumOnChange($event)"></app-sorting>
+            ]" [totalPages]="totalPages" (orderByOptionEvent)="orderByOnChange($event)"
+                (directionOptionEvent)="directionOnChange($event)" (pageNumOptionEvent)="pageNumOnChange($event)">
+            </app-sorting>
 
-        <div class="notebooks-container">
-            <div class="notebooks-header">
-                <div><h1>Classe</h1></div>
-                <div><h1>Matéria</h1></div>
-                <div><h1>Bimestre</h1></div>
-                <div><h1>Aulas</h1></div>
-                <div><h1>Trabalhos</h1></div>
-                <div><h1>Status</h1></div>
-                <div><h1>Criada Em</h1></div>
-            </div>
-            <div *ngFor="let notebook of notebookList">
-                <app-notebook-list-element
-                [id]="notebook.id"
-                [classe]="notebook.classe"
-                [subject]="notebook.subject"
-                [bimester]="notebook.bimester"
-                [lessons]="notebook.lessons"
-                [works]="notebook.works"
-                [status]="notebook.status"
-                [date]="notebook.createDate">
-                </app-notebook-list-element>
+            <div class="notebooks-container">
+                <div class="notebooks-header">
+                    <div>
+                        <h1>Classe</h1>
+                    </div>
+                    <div>
+                        <h1>Matéria</h1>
+                    </div>
+                    <div>
+                        <h1>Bimestre</h1>
+                    </div>
+                    <div>
+                        <h1>Aulas</h1>
+                    </div>
+                    <div>
+                        <h1>Trabalhos</h1>
+                    </div>
+                    <div>
+                        <h1>Status</h1>
+                    </div>
+                    <div>
+                        <h1>Criada Em</h1>
+                    </div>
+                </div>
+                <div *ngFor="let notebook of notebookList">
+                    <app-notebook-list-element [id]="notebook.id" [classe]="notebook.classe"
+                        [subject]="notebook.subject" [bimester]="notebook.bimester" [lessons]="notebook.lessons"
+                        [works]="notebook.works" [status]="notebook.status" [date]="notebook.createDate">
+                    </app-notebook-list-element>
+                </div>
             </div>
         </div>
+
+        <div *ngSwitchCase="'unlogged'" class="generic-error-container">
+            <h1>Parece que você não está logado!</h1>
+            <p>Para acessar o conteúdo é necessário realizar o login!</p>
+            <p>Clique aqui:</p>
+            <button [routerLink]="['/login']">Login</button>
+        </div>
+
+        <div *ngSwitchCase="'unverified'" class="generic-error-container"> 
+            <h1>Parece que sua conta não está verificada :(</h1>
+            <p>Para acessar o conteúdo, você precisa verificar sua conta!</p>
+            <p>Não recebeu nenhum email? Clique aqui para reenviar:</p>
+            <button (click)="resendVerificationEmail()">Reenviar Email</button>
+        </div>
+
+        <div *ngSwitchCase="'error'" class="generic-error-container">
+            <h1>Ops, Algo Deu Errado...</h1>
+            <p>Algo não parece estar funcionando bem... Tente acessar mais tarde.</p>
+            <button (click)="refreshPage()">Refresh</button>
+        </div>
+
     </div>
 </div>
