--- a/src/app/pages/lessons-page/lessons-page.component.html
+++ b/src/app/pages/lessons-page/lessons-page.component.html
@@ -7,7 +7,7 @@ type="create" title="Criar Aula">
 
 <app-back-arrow></app-back-arrow>
 
-<div class="lessons-page-container">
+<div [ngClass]="{ 'blur-filter': isCreateMode }" class="lessons-page-container">
     <h1 class="title-txt">Aulas</h1>
     <h1 *ngIf="!isLessonsLoaded" class="loading-txt">Carregando...</h1>
     <div *ngIf="isLessonsLoaded" class="content-container">
