--- a/src/app/pages/single-work-page/single-work-page.component.html
+++ b/src/app/pages/single-work-page/single-work-page.component.html
@@ -22,7 +22,7 @@ type="edit" title="Editar Trbalho/Tarefa">
 
 <app-back-arrow></app-back-arrow>
 
-<div class="single-work-container">
+<div [ngClass]="{ 'blur-filter': isGradeMode || isDeleteMode || isEditMode }" class="single-work-container">
     <h1 class="title-txt">Informações</h1>
     <div class="info-container">
         <div class="single-info-container">
