--- a/src/app/pages/pages.component.html
+++ b/src/app/pages/pages.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="isUserLoaded">
-    <app-header [username]="userName"></app-header>
+<div>
+    <app-header [username]="userName" [type]="type"></app-header>
     <router-outlet></router-outlet>
 </div>
