Making some changes

--- a/src/app/pages/change-password-page/change-password-page.component.html
+++ b/src/app/pages/change-password-page/change-password-page.component.html
@@ -19,10 +19,10 @@
         </div>
 
         <div *ngSwitchCase="'success'">
-            <h1 class="title-txt">Senha Alterada Com Sucesso</h1>
-            <p>Tudo pronto para fazer seu login, tente não esquecer da próxima vez ;)</p>
+            <h1 class="title-txt">Senha Alterada Com Sucesso!</h1>
+            <p>Senha alterada com sucesso, tudo certo para voltar com os trabalhos ;)</p>
             <div class="btns-container">
-                <button [routerLink]="['/login']" class="red-btn">Voltar Para Login</button>
+                <button [routerLink]="['/cadernetas']" class="red-btn">Voltar Para Home</button>
             </div>
         </div>
 
