--- a/src/app/components/list-elements/lesson-list-element/lesson-list-element.component.html
+++ b/src/app/components/list-elements/lesson-list-element/lesson-list-element.component.html
@@ -1,5 +1,6 @@
 <div (click)="navigateToSingleLesson()" class="lesson-container">
     <div><p>{{date}}</p></div>
     <div><p>{{title}}</p></div>
+    <div><p>{{quantity}}</p></div>
     <div><p [ngClass]="attendance">{{attendance}}</p></div>
 </div>
