--- a/src/app/pages/single-lesson-page/single-lesson-page.component.html
+++ b/src/app/pages/single-lesson-page/single-lesson-page.component.html
@@ -48,7 +48,7 @@ type="edit" title="Editar Aula">
         </div>
         <div class="single-info-container">
             <h1>Data:</h1>
-            <input disabled [value]="date">
+            <input disabled [value]="formatDate(date)">
         </div>
     </div>
     <div class="txts-container">
