--- a/src/app/components/dialog-elements/notebook-dialog/finalize-dialog/finalize-dialog.component.html
+++ b/src/app/components/dialog-elements/notebook-dialog/finalize-dialog/finalize-dialog.component.html
@@ -8,7 +8,15 @@
         <p>*Note que a soma dos pesos deve ser igual a 10!</p>
         <div (change)="changeWeightSum()" class="grades-weight-selects">
             <div>
-                <p>Tarefas/Trabalhos:</p>
+                <p>Trabalhos:</p>
+                <select [(ngModel)]="trabalhoSelect">
+                    <option *ngFor="let number of numbersArray">
+                        {{number}}
+                    </option>
+                </select>
+            </div>
+            <div>
+                <p>Tarefas:</p>
                 <select [(ngModel)]="tarefaSelect">
                     <option *ngFor="let number of numbersArray">
                         {{number}}
@@ -16,16 +24,32 @@
                 </select>
             </div>
             <div>
-                <p>Provas:</p>
-                <select [(ngModel)]="provaSelect">
+                <p>Avaliações:</p>
+                <select [(ngModel)]="avaliacaoSelect">
                     <option *ngFor="let number of numbersArray">
                         {{number}}
                     </option>
                 </select>
             </div>
             <div>
-                <p>Participação:</p>
-                <select [(ngModel)]="participacaoSelect">
+                <p>Engajamento:</p>
+                <select [(ngModel)]="engajamentoSelect">
+                    <option *ngFor="let number of numbersArray">
+                        {{number}}
+                    </option>
+                </select>
+            </div>
+            <div>
+                <p>Simulado:</p>
+                <select [(ngModel)]="simuladoSelect">
+                    <option *ngFor="let number of numbersArray">
+                        {{number}}
+                    </option>
+                </select>
+            </div>
+            <div>
+                <p>Trilhas:</p>
+                <select [(ngModel)]="trilhasSelect">
                     <option *ngFor="let number of numbersArray">
                         {{number}}
                     </option>
@@ -33,7 +57,7 @@
             </div>
             <div>
                 <p>Outros:</p>
-                <select [(ngModel)]="simuladoSelect">
+                <select [(ngModel)]="outrosSelect">
                     <option *ngFor="let number of numbersArray">
                         {{number}}
                     </option>
