--- a/src/app/pages/lessons-page/lessons-page.component.css
+++ b/src/app/pages/lessons-page/lessons-page.component.css
@@ -45,7 +45,7 @@ h1 {
     width: 1000px;
     height: 60px;
     display: grid;
-    grid-template-columns: 15% auto 10%;
+    grid-template-columns: 12.5% auto 10% 10%;
     background-color: #E0E0E0;
 }
 
